# trail3

./: package-lock.json  package.json  pyproject.toml  replit.md
backend/: crypto_utils.py  db.py  email_service.py  km_mock.py  logger.py  main.py  models.py  qumail.db  requirements.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Compose.tsx  Dashboard.tsx  Inbox.tsx  Login.tsx  Outbox.tsx  Sent.tsx  Settings.tsx
frontend/src/services/: api.ts
